# Roaming-Snail

./: .gitignore  .gitignore.bak  Billiards.vcxproj  Billiards.vcxproj.filters  CMakeLists.txt  CMakePresets.json  LICENSE.txt  RCb21332  README.md  appicon.rc  resource.h  vcpkg.json
assets/models/: lamp.mtl
assets/models/shell/: shell.mtl
assets/models/snail/: slug_body.mtl
assets/models/vegetation/: dry_bush_clump.mtl
src/: Config.hpp  Logger.hpp  main.cpp  precompiled.cpp  precompiled.h  stdafx.h
src/core/: App.cpp  App.hpp  Environment.cpp  Environment.hpp  GLUtils.hpp  Light.cpp  Light.hpp  Loader.cpp  Loader.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  World.cpp  World.hpp
src/gameplay/: GameRules.cpp  GameRules.hpp  GameState.cpp  GameState.hpp  Player.hpp
src/include/KHR/: khrplatform.h
src/include/glad/: gl.h
src/interface/: Camera.cpp  Camera.hpp  Drawable.cpp  Menu.cpp  Menu.hpp  TextRenderer.cpp  TextRenderer.hpp  Window.cpp  Window.hpp
src/objects/: Ball.cpp  Ball.hpp  Ceiling.cpp  Ceiling.hpp  Cue.cpp  Cue.hpp  CueBallMap.cpp  CueBallMap.hpp  Environment.hpp  Table.cpp  Table.hpp  World.cpp
src/physics/: ShellPhysics.cpp  ShellPhysics.hpp
src/player/: Snail.cpp  Snail.hpp
src/rendering/: SceneLighting.cpp  SceneLighting.hpp
src/shaders/: Depth.fragmentshader  Depth.vertexshader  blur.fragmentshader  line.vertexshader  post.vertexshader  screen.fragmentshader  shader.fragmentshader  terrain.fragmentshader  text.fragmentshader
src/world/: Terrain.cpp  Terrain.hpp  Vegetation.cpp  Vegetation.hpp
tools/: Generate-VcxprojFilters.ps1
